--- a/2. Enquiry Form/index2.html
+++ b/2. Enquiry Form/index2.html
@@ -17,7 +17,7 @@
                     <input id="name" type="text" required>
                     <label for="name"> Your name</label>
                 </div>
-                <div class="block1">
+                <div class="block1" id="block2">
                     <input id="phone" type="text" required>
                     <label for="phone"> Phone No</label>
                 </div>
