--- a/5. Food Website/index.html
+++ b/5. Food Website/index.html
@@ -9,29 +9,198 @@
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="./Style/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
     <title>Document</title>
 </head>
 
 <body>
     <header>
-        <a href="#" class="logo"><i class="fas-fa-untensils"></i>resto.</a>
+        <a href="#" class="logo"><i class="fas fa-utensils"></i>Resto.</a>
 
         <nav class="navbar">
-            <a class="active" href="">home</a>
-            <a href="">dishes</a>
-            <a href="">about</a>
-            <a href="">menu</a>
-            <a href="">review</a>
-            <a href="">order</a>
+            <a href="#" class="active">Home</a>
+            <a href="#">Dishes</a>
+            <a href="#">About</a>
+            <a href="#">Menu</a>
+            <a href="#">Review</a>
+            <a href="#">Order</a>
         </nav>
         <div class="icons">
-            <i class="fas fa-bars" id="bars"></i>
+            <i class="fas fa-bars" id="menu-bars"></i>
             <i class="fas fa-search" id="search-icon"></i>
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-shopping-cart"></a>
         </div>
     </header>
+    <!-- close section Start -->
+    <form action="" class="popup" id="forms">
+        <input type="search" placeholder="search here ..." id="input">
+        <label for="input" class="fas fa-search"></label>
+        <i class="fas fa-times" id="close"></i>
+    </form>
+    <!-- close section Ends -->
+
+    <!-- slideshow begins -->
+    <div class="main-slideshow">
+        <div class="slideshow">
+
+            <div class="mainBlock swiper-wrapper">
+
+                <div class="blocks swiper-slide">
+
+                    <div class="content">
+                        <h2>Our Special Dish</h2>
+                        <h1>Spicy Noodles</h1>
+                        <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Sit Natus Dolor Cumque?</p>
+                        <a class="btn" href="">Order Now</a>
+                    </div>
+                    <div class="image">
+                        <img src="./Asset/images/home-img-1.png" alt="">
+                    </div>
+                </div>
+
+                <div class="blocks swiper-slide">
+                    <div class="content">
+                        <h2>Our Special Dish</h2>
+                        <h1>Spicy Noodles</h1>
+                        <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Sit Natus Dolor Cumque?</p>
+                        <a class="btn" href="">Order Now</a>
+                    </div>
+                    <div class="image">
+                        <img src="./Asset/images/home-img-2.png" alt="">
+                    </div>
+                </div>
+
+                <div class="blocks swiper-slide">
+                    <div class="content">
+                        <h2>Our Special Dish</h2>
+                        <h1>Spicy Noodles</h1>
+                        <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Sit Natus Dolor Cumque?</p>
+                        <a class="btn" href="">Order Now</a>
+                    </div>
+                    <div class="image">
+                        <img src="./Asset/images/home-img-3.png" alt="">
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="swiper-pagination"></div>
+    </div>
+    <!-- slideshow ends -->
+    <!-- menu Starts here -->
+    <div class="menu-container">
+        <h2>Our Dishes</h2>
+        <h1>POPULAR DISHES</h1>
+        <div class="main-holder">
+            <div class="holder">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-eye"></a>
+                <img src="./Asset/images/dish-1.png" alt="">
+                <h2>Tasty Food</h2>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <span>$15.99</span>
+                <a href="" class="btn">add to cart</a>
+            </div>
+            <div class="holder">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-eye"></a>
+                <img src="./Asset/images/dish-2.png" alt="">
+                <h2>Tasty Food</h2>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <span>$15.99</span>
+                <a href="" class="btn">add to cart</a>
+            </div>
+            <div class="holder">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-eye"></a>
+                <img src="./Asset/images/dish-3.png" alt="">
+                <h2>Tasty Food</h2>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <span>$15.99</span>
+                <a href="" class="btn">add to cart</a>
+            </div>
+            <div class="holder">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-eye"></a>
+                <img src="./Asset/images/dish-4.png" alt="">
+                <h2>Tasty Food</h2>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <span>$15.99</span>
+                <a href="" class="btn">add to cart</a>
+            </div>
+            <div class="holder">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-eye"></a>
+                <img src="./Asset/images/dish-5.png" alt="">
+                <h2>Tasty Food</h2>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <span>$15.99</span>
+                <a href="" class="btn">add to cart</a>
+            </div>
+            <div class="holder">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-eye"></a>
+                <img src="./Asset/images/dish-6.png" alt="">
+                <h2>Tasty Food</h2>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <span>$15.99</span>
+                <a href="" class="btn">add to cart</a>
+            </div>
+        </div>
+    </div>
+    <!-- menu Ends here -->
+    <!-- about us starts here -->
+    <div class="about">
+        <h2>About Us</h2>
+        <h1>WHY CHOOSE US?</h1>
+        <div class="about-block">
+            <img src="./Asset/images/about-img.png" alt="">
+
+        </div>
+    </div>
+    <!-- about us ends here -->
+
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+    <script src="./Script/script.js"></script>
+
 </body>
-<script src="./Script/script.js"></script>
 
 </html>
