--- a/5. Food Website/index.html
+++ b/5. Food Website/index.html
@@ -191,13 +191,306 @@
     <div class="about">
         <h2>About Us</h2>
         <h1>WHY CHOOSE US?</h1>
-        <div class="about-block">
-            <img src="./Asset/images/about-img.png" alt="">
+        <div class="main-block">
+            <div class="about-block">
+                <img src="./Asset/images/about-img.png" alt="">
+            </div>
+            <div class="about-block2">
+                <h1>Best Food In The Country</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, sequi corrupti corporis quaerat voluptatem ipsam neque labore modi autem, saepe numquam quod reprehenderit rem? Tempora aut soluta odio corporis nihil!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, nemo. Sit porro illo eos cumque deleniti iste alias, eum natus.</p>
+                <div class="last">
+                    <div class="about-info"> <i id="about-info" class="fas fa-shipping-fast"></i>
+                        <span> Free Delivery</span>
+                    </div>
+                    <div class="about-info"> <i id="about-info" class="fas fa-dollar-sign"></i>
+                        <span>Easy Payments</span>
+                    </div>
+                    <div class="about-info"> <i id="about-info" class="fas fa-headset"></i>
+                        <span> 24/7 Service</span>
+                    </div>
+                </div>
+                <div class="btn-holder"><a href="" id="learn" class="btn">Learn More</a></div>
+
+            </div>
 
         </div>
+
     </div>
     <!-- about us ends here -->
+    <!-- menu starts here -->
+    <div class="menu">
+        <h2>Our Menu</h2>
+        <h1>TODAY'S SPECIALITY</h1>
+        <div class="menu-holder">
+            <div class="menu-pocket">
+                <div class="menu-image">
+                    <img src="./Asset/images/menu-1.jpg" alt="">
+                    <a href="#" class="fas fa-heart"></a>
+                </div>
+                <div class="menu-content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <h2>Delicious Food</h2>
+                    <h3>Lorem Ipsum Dolor Sit, Amet Consectetur Adipisicing Elit. Excepturi, Accusantium.</h3>
+                    <a href="" class="btn">Add To Cart</a>
+                    <span class="cost">$12.99</span>
+                </div>
+            </div>
+            <div class="menu-pocket">
+                <div class="menu-image">
+                    <img src="./Asset/images/menu-2.jpg" alt="">
+                    <a href="#" class="fas fa-heart"></a>
+                </div>
+                <div class="menu-content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <h2>Delicious Food</h2>
+                    <h3>Lorem Ipsum Dolor Sit, Amet Consectetur Adipisicing Elit. Excepturi, Accusantium.</h3>
+                    <a href="" class="btn">Add To Cart</a>
+                    <span class="cost">$12.99</span>
+                </div>
+            </div>
+            <div class="menu-pocket">
+                <div class="menu-image">
+                    <img src="./Asset/images/menu-3.jpg" alt="">
+                    <a href="#" class="fas fa-heart"></a>
+                </div>
+                <div class="menu-content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <h2>Delicious Food</h2>
+                    <h3>Lorem Ipsum Dolor Sit, Amet Consectetur Adipisicing Elit. Excepturi, Accusantium.</h3>
+                    <a href="" class="btn">Add To Cart</a>
+                    <span class="cost">$12.99</span>
+                </div>
+            </div>
+            <div class="menu-pocket">
+                <div class="menu-image">
+                    <img src="./Asset/images/menu-4.jpg" alt="">
+                    <a href="#" class="fas fa-heart"></a>
+                </div>
+                <div class="menu-content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <h2>Delicious Food</h2>
+                    <h3>Lorem Ipsum Dolor Sit, Amet Consectetur Adipisicing Elit. Excepturi, Accusantium.</h3>
+                    <a href="" class="btn">Add To Cart</a>
+                    <span class="cost">$12.99</span>
+                </div>
+            </div>
+            <div class="menu-pocket">
+                <div class="menu-image">
+                    <img src="./Asset/images/menu-5.jpg" alt="">
+                    <a href="#" class="fas fa-heart"></a>
+                </div>
+                <div class="menu-content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <h2>Delicious Food</h2>
+                    <h3>Lorem Ipsum Dolor Sit, Amet Consectetur Adipisicing Elit. Excepturi, Accusantium.</h3>
+                    <a href="" class="btn">Add To Cart</a>
+                    <span class="cost">$12.99</span>
+                </div>
+            </div>
+            <div class="menu-pocket">
+                <div class="menu-image">
+                    <img src="./Asset/images/menu-6.jpg" alt="">
+                    <a href="#" class="fas fa-heart"></a>
+                </div>
+                <div class="menu-content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <h2>Delicious Food</h2>
+                    <h3>Lorem Ipsum Dolor Sit, Amet Consectetur Adipisicing Elit. Excepturi, Accusantium.</h3>
+                    <a href="" class="btn">Add To Cart</a>
+                    <span class="cost">$12.99</span>
+                </div>
+            </div>
+            <div class="menu-pocket">
+                <div class="menu-image">
+                    <img src="./Asset/images/menu-7.jpg" alt="">
+                    <a href="#" class="fas fa-heart"></a>
+                </div>
+                <div class="menu-content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <h2>Delicious Food</h2>
+                    <h3>Lorem Ipsum Dolor Sit, Amet Consectetur Adipisicing Elit. Excepturi, Accusantium.</h3>
+                    <a href="" class="btn">Add To Cart</a>
+                    <span class="cost">$12.99</span>
+                </div>
+            </div>
+            <div class="menu-pocket">
+                <div class="menu-image">
+                    <img src="./Asset/images/menu-8.jpg" alt="">
+                    <a href="#" class="fas fa-heart"></a>
+                </div>
+                <div class="menu-content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <h2>Delicious Food</h2>
+                    <h3>Lorem Ipsum Dolor Sit, Amet Consectetur Adipisicing Elit. Excepturi, Accusantium.</h3>
+                    <a href="" class="btn">Add To Cart</a>
+                    <span class="cost">$12.99</span>
+                </div>
+            </div>
+            <div class="menu-pocket">
+                <div class="menu-image">
+                    <img src="./Asset/images/menu-9.jpg" alt="">
+                    <a href="#" class="fas fa-heart"></a>
+                </div>
+                <div class="menu-content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <h2>Delicious Food</h2>
+                    <h3>Lorem Ipsum Dolor Sit, Amet Consectetur Adipisicing Elit. Excepturi, Accusantium.</h3>
+                    <a href="" class="btn">Add To Cart</a>
+                    <span class="cost">$12.99</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- menu ends here -->
+    <div class="review">
+        <h2>Customer's Review</h2>
+        <h1>WHAT THEY SAY</h1>
+        <div class="reviews">
+            <div class="one-review">
+                <i class="fas fa-quote-right"></i>
+                <div class="review1">
+                    <div class="first">
+                        <img src="./Asset/images/pic-1.png" alt="">
+                    </div>
+                    <div class="second">
+                        <h2>John Deo</h2>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="third">
+                    <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Sit Fugiat Consequuntur Repellendus Aperiam Deserunt Nihil, Corporis Fugit Voluptatibus Voluptate Totam Neque Illo Placeat Eius Quis Laborum Aspernatur Quibusdam. Ipsum, Magni.</p>
+                </div>
+            </div>
+            <div class="one-review">
+                <i class="fas fa-quote-right"></i>
+                <div class="review1">
+                    <div class="first">
+                        <img src="./Asset/images/pic-2.png" alt="">
+                    </div>
+                    <div class="second">
+                        <h2>John Deo</h2>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="third">
+                    <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Sit Fugiat Consequuntur Repellendus Aperiam Deserunt Nihil, Corporis Fugit Voluptatibus Voluptate Totam Neque Illo Placeat Eius Quis Laborum Aspernatur Quibusdam. Ipsum, Magni.</p>
+                </div>
+            </div>
+            <div class="one-review">
+                <i class="fas fa-quote-right"></i>
+                <div class="review1">
+                    <div class="first">
+                        <img src="./Asset/images/pic-3.png" alt="">
+                    </div>
+                    <div class="second">
+                        <h2>John Deo</h2>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="third">
+                    <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Sit Fugiat Consequuntur Repellendus Aperiam Deserunt Nihil, Corporis Fugit Voluptatibus Voluptate Totam Neque Illo Placeat Eius Quis Laborum Aspernatur Quibusdam. Ipsum, Magni.</p>
+                </div>
+            </div>
+            <div class="one-review">
+                <i class="fas fa-quote-right"></i>
+                <div class="review1">
+                    <div class="first">
+                        <img src="./Asset/images/pic-4.png" alt="">
+                    </div>
+                    <div class="second">
+                        <h2>John Deo</h2>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="third">
+                    <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Sit Fugiat Consequuntur Repellendus Aperiam Deserunt Nihil, Corporis Fugit Voluptatibus Voluptate Totam Neque Illo Placeat Eius Quis Laborum Aspernatur Quibusdam. Ipsum, Magni.</p>
+                </div>
+            </div>
+        </div>
 
+    </div>
+    <div class="info">
+
+    </div>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="./Script/script.js"></script>
 
